# amazon-q-developer-cli

./: Cargo.toml  pnpm-lock.yaml  turbo.json
.github/: dependabot.yml
.github/workflows/: npm-publish.yml  rust.yml  typescript.yml
crates/amzn-codewhisperer-client/src/: config.rs
crates/amzn-qdeveloper-client/src/: config.rs
crates/amzn-qdeveloper-streaming-client/src/: config.rs
crates/amzn-toolkit-telemetry/src/: config.rs
crates/dbus/src/dbus/: mod.rs
crates/fig_api_client/src/: error.rs  model.rs
crates/fig_api_client/src/clients/: client.rs  streaming_client.rs
crates/fig_desktop/: Cargo.toml
crates/fig_desktop/src/: main.rs
crates/fig_desktop/src/platform/: macos.rs
crates/fig_desktop/src/platform/linux/: icons.rs
crates/fig_desktop/src/webview/: mod.rs
crates/fig_input_method/: Cargo.toml
crates/fig_input_method/src/: imk.rs  main.rs
crates/fig_util/: Cargo.toml
crates/macos-utils/: Cargo.toml
crates/macos-utils/src/window_server/: mod.rs
crates/q_cli/: Cargo.toml
proto/: package.json  tsconfig.json
tests/fig-api/: package.json  tsconfig.json
tests/fig-api/src/: fs.test.ts
