[package]
name = "macos-utils"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1.6"
core-graphics.workspace = true
core-foundation.workspace = true
cocoa.workspace = true
libc.workspace = true
objc.workspace = true
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = [
    "NSBitmapImageRep",
    "NSGraphicsContext",
    "NSImage",
    "NSImageRep",
    "NSWorkspace",
    "NSRunningApplication",
    "libc",
] }
objc2-foundation = { version = "0.2.2", features = [
    "block2",
    "NSDictionary",
    "NSDistributedNotificationCenter",
    "NSEnumerator",
    "NSOperation",
    "NSProcessInfo",
] }
dashmap.workspace = true
flume = "0.11.0"
fnv = "1.0.7"
accessibility-sys = { path = "./accessibility-master/accessibility-sys" }
once_cell.workspace = true
accessibility = { path = "./accessibility-master/accessibility" }
appkit-nsworkspace-bindings.workspace = true
tracing.workspace = true
tokio.workspace = true
nix.workspace = true

[dependencies]
block2 = "0.5.1"
